# bazel-example

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  WORKSPACE.bazel  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/helloworld/: BUILD.bazel
apps/myapp/: BUILD.bazel
apps/react-app/: BUILD.bazel  babel.config.js  jest.config.js  package.json  tsconfig.json  webpack.config.js
apps/react-app/src/: App.test.tsx  App.tsx  index.html  index.scss  index.tsx
apps/react-app/src/components/button/: Button.scss  Button.tsx
apps/react-lib/: BUILD.bazel  package.json
apps/react-lib/src/: index.scss
apps/react-lib/src/header/: Header.scss  Header.tsx
apps/spring-boot-app/: BUILD.bazel
apps/spring-boot-app/src/test/java/com/example/demo/: BUILD.bazel
