load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@aspect_rules_js//js:defs.bzl", "js_library")

npm_link_all_packages()

js_library(
    name = "react_lib_library",
    srcs = glob(["src/**/*"]) + [
        "package.json",
    ],
    visibility = ["//apps/react-app:__subpackages__"],
)

npm_package(
    name = "react-lib",
    srcs = [":react_lib_library"],
    package = "react-lib",
    visibility = ["//visibility:public"],
)
